--- a/Vue/Arrary.html
+++ b/Vue/Arrary.html
@@ -9,6 +9,9 @@
 <body>
     <div id="app">
         <ul>
+            <li v-for= "n in number">{{n}}</li>
+        </ul>
+        <ul>
             <li>Even Number is </li>
             <li v-for= "n in evennumber">{{n}}</li>
         </ul>
